--- a/bestelformulier.css
+++ b/bestelformulier.css
@@ -22,6 +22,13 @@ count {
 order-forms { /*everything inside the order form*/
     width: 100%;
 }
+.order-item-group {
+	max-width: 806px;
+	margin: 0.2em;
+	float: left;
+	width: 50%;
+	min-width: 355px;
+}
 order-items { /*order items nothing else*/
 	text-align:left;
 	width:50%;
@@ -57,7 +64,7 @@ extras{
 }
 .box {
 	width: auto;
-	height: auto;
+	height: 240;
 	min-height: 240px ;
 	max-width: 800px;
 	min-width: 355px;
@@ -72,8 +79,12 @@ extras{
 	height: auto;	
 }
 #spijs {
-	margin-top: 2em;
-	width: auto;
+	/*width: auto;*/
+	background-color: lavender;
+}
+#roomboter {
+	/*width: auto;*/
+	background-color: bisque;
 }
 .ItemButtons {
 	width: 50%;
