creating order-items-containers dynamically from orders.json file

--- a/components/rt-orders/order-item-container/order-item-container.html
+++ b/components/rt-orders/order-item-container/order-item-container.html
@@ -1,6 +1,7 @@
 <template id="ORDER-ITEM-CONTAINER">
     <style>
         :host {
+            display: inline-block;
             background: pink;
             border: 5px dashed red;
         }
@@ -10,14 +11,12 @@
         }
 
         slot[name*="pie"] {
+            /* hide both largepie and smallpie items */
             display: none;
         }
     </style>
     <style id="piesize">
-        /* Web Component injects style
-        slot[name="largepie"] {
-            display: inherit;
-        } */
+        /* Web Component injects style for largepie/smallpie here */
     </style>
     <div class="title">
         <slot name="title">[TITLE]</slot>
