using orders.json

--- a/components/rt-orders/order-forms/order-forms_v2.html
+++ b/components/rt-orders/order-forms/order-forms_v2.html
@@ -1,1 +1,12 @@
-<template id="ORDER-FORMS"></template>
+<template id="ORDER-FORMS">
+    <style>
+        :host {
+            display: inline-block;
+            background: pink;
+            border: 5px dashed blue;
+        }
+    </style>
+    <div class="all-items-container">
+        <slot></slot>
+    </div>
+</template>
