--- a/components/rt-orders/order-item-container/order-item-container.html
+++ b/components/rt-orders/order-item-container/order-item-container.html
@@ -21,7 +21,7 @@
     <div class="title">
         <slot name="title">[TITLE]</slot>
     </div>
-    <order-buttons></order-buttons>
+    <order-button></order-button>
     <slot name="largepie" part="largepie">[LARGEPIE]</slot>
     <slot name="smallpie" part="smallpie">[SMALLPIE]</slot>
     <div class="info">
