--- a/components/rt-orders/order-form/order-form_v2.html
+++ b/components/rt-orders/order-form/order-form_v2.html
@@ -1,9 +1,10 @@
 <template id="ORDER-FORM">
     <style>
         :host {
-            display: inline-block;
+            display: flex;
             background: pink;
             border: 5px dashed blue;
+            
         }
     </style>
     <div class="all-items-container">
