--- a/components/rt-orders/order-form/order-form_v2.html
+++ b/components/rt-orders/order-form/order-form_v2.html
@@ -1,10 +1,16 @@
 <template id="ORDER-FORM">
     <style>
         :host {
-            display: flex;
+            display: inline-block;
             background: pink;
             border: 5px dashed blue;
-            
+        }
+        div { /* all-item-container(origin)*/
+            background:hotpink;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            flex-flow: row wrap;
         }
     </style>
     <div class="all-items-container">
