--- a/components/rt-orders/order-item-container/order-item-container.html
+++ b/components/rt-orders/order-item-container/order-item-container.html
@@ -1,11 +1,11 @@
 <template id="ORDER-ITEM-CONTAINER">
     <style>
         :host {
-            display: inline-flex;
+            display: flex;
             background: pink;
             border: 5px dashed red;
             height: 169px;
-            /*margin: 5px;*/
+            margin: 5px;
         }
 
         ::slotted(order-item) {
