--- a/flexboxtest.css
+++ b/flexboxtest.css
@@ -2,6 +2,7 @@
     display: flex;
     justify-content: center;
     text-align: center;
+    background-color: rgba(169, 169, 169, 0.5);
 }
 .test1{
     display: flex;
@@ -94,13 +95,14 @@
 }*/
 order-item{
     font-weight: bold;
-    max-width: 355px;
-    /*background-color: rgb(255, 255, 255, 0.6);*/
+    width: 355px;
+    background-color: rgb(255, 255, 255, 0.6);
     border-bottom-style: solid;
     border-width: 0.5em;
     border-color: rgb(255, 255, 255, 0.0);
     border-bottom-color: lightgreen;
     border-bottom-width: 0.15em;
+    height: 2em;
     
 }
 /*#gember-sinaasappel-info{
