--- a/components/rt-orders/order-item-container/order-item-container.html
+++ b/components/rt-orders/order-item-container/order-item-container.html
@@ -23,8 +23,10 @@
     <div class="title">
         <slot name="title">[TITLE]</slot>
     </div>
-    
-    <order-button></order-button>
+    <div></div>
+    <order-button> 
+        <button class="sizeButton1">v</button>
+    </order-button>
     <slot name="largepie" part="largepie">[LARGEPIE]</slot>
     <slot name="smallpie" part="smallpie">[SMALLPIE]</slot>
     <div class="info">
